# my_reviewer_01

./: .env.example  .gitignore  CLAUDE.md  FINAL_CHECKLIST.md  INTEGRATION_GUIDE.md  PHASE1_TASKS.md  PHASE2_TASKS.md  PHASE3_TASKS.md  PHASE4_TASKS.md  PROJECT_SPEC.md  README.md  V2_INTERFACE.md  pyproject.toml  run_review.py
examples/: sample_report.md  sample_task.txt  simple_usage.py  subgraph_usage.py
scripts/: manual_test.py  run_calibration.py
src/reviewer/: __init__.py  aggregator.py  graph.py  llm.py  schemas.py  state.py
src/reviewer/nodes/: __init__.py  aggregator_node.py  base.py  completeness.py  information_recall.py  input_validator.py  logical_coherence.py  presentation_specificity.py  question_alignment.py  source_quality.py
src/reviewer/prompts/: __init__.py  _common.md  completeness.md  information_recall.md  logical_coherence.md  presentation_specificity.md  question_alignment.md  source_quality.md
tests/: conftest.py  test_aggregator.py  test_graph.py  test_integration.py  test_nodes.py  test_prompts.py  test_schemas.py
tests/calibration/: README.md
